- various small fixes